parallel-run-mirroring/monolith/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tax-monolith
  labels:
    app: tax-monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tax-monolith
  template:
    metadata:
      labels:
        app: tax-monolith
    spec:
      containers:
        - name: tax-monolith
          image: learncloudnative/tax-monolith:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tax-monolith
spec:
  selector:
    app: tax-monolith
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
